--- a/Starter/IdentityNetCore/appsettings.json
+++ b/Starter/IdentityNetCore/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=127.0.0.1;Database=AspnetIdentityV2;User ID=aspnet;Password=xxxx;Encrypt=False"
+	"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AspnetIdentityV2;User ID=;Password=;"
   },
   "AllowedHosts": "*"
 }
