--- a/Starter/IdentityNetCore/appsettings.Development.json
+++ b/Starter/IdentityNetCore/appsettings.Development.json
@@ -7,7 +7,13 @@
     }
   },
   "ConnectionStrings": {
-	"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AspnetIdentityV2;User ID=;Password=;"
+	"Default": "Server=(localdb)\\MSSQLLocalDB;Database=AspnetIdentityV2;User ID=;Password=;"
+  },
+  "Smtp": {
+	"Host": "in-v3.mailjet.com",
+	"Username": "e5b584493cf8cc2f2d3a51d9b207f96f",
+	"Password": "9dc37645a48f29ce2e94d3013aac73b2",
+	"Port": 25
   },
   "AllowedHosts": "*"
 }
