--- a/Starter/IdentityNetCore/appsettings.json
+++ b/Starter/IdentityNetCore/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-	"ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=AspnetIdentityV2;User ID=;Password=;"
+	"Default": "Server=(localdb)\\MSSQLLocalDB;Database=AspnetIdentityV2;User ID=;Password=;"
   },
   "AllowedHosts": "*"
 }
